WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11504
Fix warnings on non 32 bit platforms
https://bugs.webkit.org/show_bug.cgi?id=11504
Summary
Fix warnings on non 32 bit platforms
Zack Rusin
Reported
2006-11-03 05:25:52 PST
On platforms with 32bit userspace, uintptr_t is 32bits so compiler complains about truncating a 64bit type to 32bits. This is basically the same casts we added in kdelibs to kjs.
Attachments
fix warning by explicitly casting
(1.24 KB, patch)
2006-11-03 05:26 PST
,
Zack Rusin
timothy
: review+
Details
Formatted Diff
Diff
alternative fix
(4.29 KB, patch)
2006-11-03 09:52 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zack Rusin
Comment 1
2006-11-03 05:26:30 PST
Created
attachment 11363
[details]
fix warning by explicitly casting
Timothy Hatcher
Comment 2
2006-11-03 09:20:24 PST
Comment on
attachment 11363
[details]
fix warning by explicitly casting Looks fine. static_cast would be safer.
Alexey Proskuryakov
Comment 3
2006-11-03 09:52:10 PST
Created
attachment 11364
[details]
alternative fix This should fix the issue by eliminating runtime checks.
Darin Adler
Comment 4
2006-11-03 12:27:26 PST
Comment on
attachment 11364
[details]
alternative fix I think Alexey's fix is better. r=me
Alexey Proskuryakov
Comment 5
2006-11-03 14:21:18 PST
Committed revision 17580. Here's hope that my fix actually helps :-)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug