        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=11504
        Fix warnings on non 32 bit platforms

        * kjs/JSImmediate.h:
        (KJS::JSImmediate::NanAsBits):
        (KJS::JSImmediate::oneAsBits):
        Rewrite in a way that moves runtime checks to compile-time.

        (KJS::):
        (KJS::JSImmediate::fromDouble):
        (KJS::JSImmediate::toDouble):



Canonical link: https://commits.webkit.org/14779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17580 268f45cc-cd09-0410-ab3c-d52691b4dbfc